# tradingbot

./: .env  .env.example  .gitignore  ALERTS.md  ARCHITECTURE.md  Dockerfile.api  Dockerfile.worker  Makefile  README.md  TradingBot.postman_collection.json  docker-compose.yml  pyproject.toml
app/: cli.py  config.py  deps.py  main.py  metrics.py
app/api/: auth.py  routes.py  schemas.py
app/db/: models.py  session.py
app/services/: coinbase.py  idempotency.py  marketdata.py  reporting.py  risk.py  sizing.py  trading.py
app/utils/: crypto.py  logging.py
app/workers/: tasks.py
docker/: grafana-dashboard.json
migrations/: env.py
migrations/versions/: 0001_init.py
scripts/: send_mock_alerts.py
tests/: test_coinbase.py  test_idempotency.py  test_risk.py  test_trading.py  test_webhook.py
